# ET-Films-Story-Bot

./: .replit  .replitignore  bot_stream.session  bot_stream.session-journal  main.py  pyproject.toml  read_series_db.py  replit.md  requirements.txt  series.db  single.db  single.db-shm  single.db-wal  single_copy.db  user.db
.agents/: agent_assets_metadata.toml
bot/: __init__.py  admin.py  admin_balance.py  all_film.py  background_worker.py  bot.py  config.py  database.py  help.py  payment.py  referral.py  run.py  series.py  single.py  user_block.py
webapp/: __init__.py  api.py  hls_manager.py  shared.py  telethon_stream.py  validate.py
webapp/static/: app.js  index.html  style.css
