[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "aiosqlite>=0.21.0",
    "google-generativeai>=0.8.5",
    "pillow>=11.3.0",
    "pip==24.3.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==21.10.0",
]
